--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>GAS講座</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/solarized-rev.css">
+		<link rel="stylesheet" href="css/theme/moon-rev.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -25,11 +25,17 @@
 		<div class="reveal">
 			<div class="slides">
 				<section data-prevent-swipe data-transition="concave" data-background-image="images/background-gas.jpg">
-					<h1 style="color: orange; text-shadow: -4px -4px 4px rgba(0, 0, 0, 0.4),4px 4px 4px rgba(255, 255, 255, 0.5);">GAS講座</h1>
-					<h3 style="color: whitesmoke; text-shadow: -2px -4px 4px rgba(0, 0, 0, 0.5), 2px -4px 4px rgba(0, 0, 0, 0.5);">Google Apps Script</h3>
-					<h6 style="color: whitesmoke; text-shadow: -1px -2px 4px rgba(0, 0, 0, 0.5), 1px -2px 4px rgba(0, 0, 0, 0.5);">Presented by Tokiwa</h6>
+					<h1 style="color: orange; text-shadow: -4px -4px 4px rgba(0, 0, 0, 0.4),4px 4px 4px rgba(255, 255, 255, 0.5); font-family:'Ro篠Std'">
+						GAS講座
+					</h1>
+					<h3 style="color: whitesmoke; text-shadow: -2px -4px 4px rgba(0, 0, 0, 0.5), 2px -4px 4px rgba(0, 0, 0, 0.5);">
+						Google Apps Script
+					</h3>
+					<h6 style="color: whitesmoke; text-shadow: -1px -2px 4px rgba(0, 0, 0, 0.5), 1px -2px 4px rgba(0, 0, 0, 0.5);">
+						Presented by Tokiwa
+					</h6>
 				</section>
-				<section data-markdown="slide.md" deta-separator="^\n---\n$" data-separator-vertical="^\n>>>\n$" data-separator-notes="^Note:" data-prevent-swipe data-transition="fade" data-transition-speed="fast"></section>
+				<section data-markdown="slide.md" deta-separator="^\n---\n$" data-separator-vertical="^\n\|\|\|\n$" data-separator-notes="^Note:" data-prevent-swipe data-transition="fade" data-transition-speed="fast"></section>
 			</div>
 		</div>
 
