--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
+				<section data-markdown="notice.md" deta-separator="^\n---\n$" data-separator-vertical="^\n\|\|\|\n$" data-separator-notes="^Note:" data-prevent-swipe data-transition="concave" data-transition-speed="fast"></section>
 				<section data-prevent-swipe data-transition="concave" data-background-image="images/background-gas.jpg">
-					<h1 style="color: orange; text-shadow: -4px -4px 4px rgba(0, 0, 0, 0.4),4px 4px 4px rgba(255, 255, 255, 0.5); font-family:'Ro篠Std'">
+					<h1 style="color: orange; text-shadow: -4px -4px 4px rgba(0, 0, 0, 0.4),4px 4px 4px rgba(255, 255, 255, 0.5)">
 						GAS講座
 					</h1>
 					<h3 style="color: whitesmoke; text-shadow: -2px -4px 4px rgba(0, 0, 0, 0.5), 2px -4px 4px rgba(0, 0, 0, 0.5);">
